fix: header layout issues

--- a/src/Components/home/header.module.css
+++ b/src/Components/home/header.module.css
@@ -32,7 +32,8 @@
 }
 
 .transitions-container {
-  height: 15em;
+  height: 18em;
+  overflow: hidden;
 }
 
 .transitions-item {
